# geovito-stack

./: .env.example  .env.import.example  .env.prod.example  .env.staging.example  .gitignore  ARCHITECTURE.md  CORE_CONTRACT.md  DESIGN_IMPLEMENTATION_CONTRACT.md  EMBED_SYSTEM.md  ENVIRONMENT.md  LANGUAGE_SYSTEM.md  MEDIA_SYSTEM.md  PRE_IMPORT_GATE.md  README.md  RUNBOOK.md  SEARCH_SYSTEM.md  SUGGESTIONS_SYSTEM.md  docker-compose.yml
app/: .dockerignore  .env.example  .gitignore  DOCS_PERMISSIONS.md  README.md  README_LOCAL.md  package-lock.json  package.json
docs/: AUDIT_EVENTS.md  BACKUP_POLICY.md  CODEX_STATUS.md  COMMUNITY_SYSTEM.md  DASHBOARD_CHECKLIST.md  DASHBOARD_DESIGN_NOTE.md  DR_LOG_FORMAT.md  DR_RUNBOOK.md  EMERGENCY_RUNBOOK.md  EVENT_NAMING.md  GEOVITO_DESIGN_FOUNDATION_PHASE0.md  GEOVITO_DESIGN_PHASE1_PUBLIC.md  GEOVITO_DESIGN_PHASE2_ATLAS.md  GEOVITO_DESIGN_PHASE3_EDITORIAL.md  GEOVITO_DESIGN_PHASE4_ACCOUNT.md  GEOVITO_DESIGN_PHASE5_DASHBOARD.md  GEOVITO_DESIGN_PHASE6_PREMIUM.md  GEOVITO_DESIGN_PHASE8_APPEARANCE_PANEL.md  GEOVITO_DESIGN_QA_PASS.md  GEOVITO_FEATURE_AUDIT_FOR_DESIGN.md  GO_LIVE_GATE.md  I18N_GOVERNANCE.md  INCIDENT_RUNBOOK.md  LAUNCH_KIT.md  (+15 more)
tools/metrics_collector/: .env.example  .gitignore  README.md  pyproject.toml
tools/metrics_collector/src/geovito_metrics_collector/: __init__.py  cli.py  config.py  sanitize.py  schema.py  storage.py
tools/metrics_collector/src/geovito_metrics_collector/providers/: __init__.py  adsense.py  cloudflare.py  ga4.py  gsc.py
tools/metrics_collector/tests/: test_sanitize.py  test_schema.py
(+529 files in other folders)
